--- a/examples/index.html
+++ b/examples/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <p>There is no content here, look your console (F12)</p>
-        <script src="/js/sources/easy-require.js"></script>
-        <script src="/js/sources/main.js"></script>
+        <script src="./js/sources/easy-require.js"></script>
+        <script src="./js/sources/main.js"></script>
     </body>
 </html>
